@startuml

title 12.3. Workflow status drift and history completion

hide circle
skinparam linetype ortho

class StatusTransitionService <<service>>
class BusinessDocumentStatusSynchronizer <<service>>
class InventoryPostingService <<service>>
class OrderHistoryRecorder <<history>>
class GenericStatusHistoryRecorder <<history>>
class InventoryDocumentWorkflowDefinition <<definition>>
class WorkflowDriftTestSuite <<tests>>

entity Order
entity Purchase
entity InventoryDocument
entity ProductionOrder
entity OrderHistory
entity StatusHistory

StatusTransitionService --> OrderHistoryRecorder : order transitions
StatusTransitionService --> GenericStatusHistoryRecorder : generic transitions
BusinessDocumentStatusSynchronizer --> Order : derived status
BusinessDocumentStatusSynchronizer --> Purchase : derived status
InventoryPostingService --> InventoryDocument : post/cancel status
InventoryDocumentWorkflowDefinition --> GenericStatusHistoryRecorder : future direct workflow
WorkflowDriftTestSuite --> StatusTransitionService
WorkflowDriftTestSuite --> BusinessDocumentStatusSynchronizer
WorkflowDriftTestSuite --> InventoryPostingService

note right of StatusTransitionService
  Implemented status:
  - Universal workflow core exists.
  - Order, Purchase and ProductionOrder definitions exist.
  - InventoryDocument implements WorkflowSubjectInterface.
  - InventoryDocument post/cancel history remains specialized in
    InventoryPostingService and is documented in src/Workflow/README.md.
  - Keep history recording exactly once for every post/cancel/reversal.
end note

note right of BusinessDocumentStatusSynchronizer
  Implemented:
  - Purchase derived statuses write StatusHistory when context exists.
  - Order derived statuses now write OrderHistory when context exists:
    awaiting_stock, ready_to_ship, partially_shipped, shipped,
    partially_returned, returned.
  - Delivered/completed remain explicit business actions, not inferred.
  - Posting/cancel/reversal passes TransitionContext through the
    progress recalculator into the synchronizer.
end note

note right of InventoryDocumentWorkflowDefinition
  Decision:
  - No generic InventoryDocumentWorkflowDefinition was added in this pass.
  - InventoryPostingService owns the specialized inventory workflow because
    posting has transaction boundaries and stock side effects.

  Optional future implementation:
  - post: draft -> posted
  - cancel_draft: draft -> canceled
  - cancel_posted: posted -> canceled with reversal side effect

  Caveat:
  Stock posting contains heavy domain logic and transaction boundaries.
  If added, the workflow definition should delegate to actions/services,
  not move posting math into the generic transition service.
end note

note bottom
  Verification target:
  - tests/Service/BusinessDocumentStatusSynchronizerTest.php
  - tests/Service/InventoryPostingServiceTest.php
  - tests/Workflow/WorkflowStatusDriftTest.php
  - lint:container
  - doctrine:schema:validate --skip-sync
end note

@enduml
